--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -16,4 +16,10 @@
     <welcome-file-list>
         <welcome-file>StaffDashboard.html</welcome-file>
     </welcome-file-list>
+    <resource-ref>
+        <res-ref-name>jdbc/pawsDatasource</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+        <res-sharing-scope>Shareable</res-sharing-scope>
+    </resource-ref>
 </web-app>
