--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
-                             http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-         version="3.1">
-
+<web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee                              http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <!-- Welcome page -->
     <welcome-file-list>
         <welcome-file>StaffDashboard.html</welcome-file>
     </welcome-file-list>
-
     <!-- Session config -->
+    <servlet>
+        <servlet-name>RecordController</servlet-name>
+        <servlet-class>controller.RecordController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>RecordController</servlet-name>
+        <url-pattern>/RecordController</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>30</session-timeout>
     </session-config>
-
 </web-app>
