--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -9,9 +9,25 @@
         <servlet-name>RecordController</servlet-name>
         <servlet-class>controller.RecordController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ActivityLogController</servlet-name>
+        <servlet-class>controller.ActivityLogController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ReportController</servlet-name>
+        <servlet-class>controller.ReportController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>RecordController</servlet-name>
         <url-pattern>/RecordController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ActivityLogController</servlet-name>
+        <url-pattern>/ActivityLogController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ReportController</servlet-name>
+        <url-pattern>/ReportController</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>30</session-timeout>
