--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -13,6 +13,10 @@
         <servlet-name>ActivityLogController</servlet-name>
         <servlet-class>controller.ActivityLogController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>LogoutServlet</servlet-name>
+        <servlet-class>controller.LogoutServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>RecordController</servlet-name>
         <url-pattern>/RecordController</url-pattern>
@@ -20,6 +24,10 @@
     <servlet-mapping>
         <servlet-name>ActivityLogController</servlet-name>
         <url-pattern>/ActivityLogController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>LogoutServlet</servlet-name>
+        <url-pattern>/LogoutServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>30</session-timeout>
