--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,8 +28,10 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.CSC584-jaf-1.1.1=C:\\Users\\amira\\Documents\\CDCS230\\sem 4\\CSC584\\jaf-1.1.1
 file.reference.Downloads-jaf-1_1_1=../../../../Downloads/jaf-1_1_1
 file.reference.javax.mail.jar=../../../../Downloads/javax.mail.jar
+file.reference.javax.mail.jar-1=C:\\Users\\amira\\Documents\\CDCS230\\sem 4\\CSC584\\javax.mail.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -45,7 +47,9 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.Downloads-jaf-1_1_1}:\
-    ${file.reference.javax.mail.jar}
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.CSC584-jaf-1.1.1}:\
+    ${file.reference.javax.mail.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
