--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -6,29 +6,86 @@
     </welcome-file-list>
     <!-- Session config -->
     <servlet>
-        <servlet-name>RecordController</servlet-name>
-        <servlet-class>controller.RecordController</servlet-class>
+        <servlet-name>AdopterController</servlet-name>
+        <servlet-class>controller.AdopterController</servlet-class>
     </servlet>
+    <servlet-mapping>
+        <servlet-name>AdopterController</servlet-name>
+        <url-pattern>/AdopterController</url-pattern>
+    </servlet-mapping>
+    
     <servlet>
-        <servlet-name>ActivityLogController</servlet-name>
-        <servlet-class>controller.ActivityLogController</servlet-class>
+        <servlet-name>ApplicationController</servlet-name>
+        <servlet-class>controller.ApplicationController</servlet-class>
     </servlet>
+    <servlet-mapping>
+        <servlet-name>ApplicationController</servlet-name>
+        <url-pattern>/ApplicationController</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>LoginServlet</servlet-name>
+        <servlet-class>controller.LoginServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>LoginServlet</servlet-name>
+        <url-pattern>/LoginServlet</url-pattern>
+    </servlet-mapping>
+    
     <servlet>
         <servlet-name>LogoutServlet</servlet-name>
         <servlet-class>controller.LogoutServlet</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>RecordController</servlet-name>
-        <url-pattern>/RecordController</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>ActivityLogController</servlet-name>
-        <url-pattern>/ActivityLogController</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
         <servlet-name>LogoutServlet</servlet-name>
         <url-pattern>/LogoutServlet</url-pattern>
     </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>PetController</servlet-name>
+        <servlet-class>controller.PetController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>PetController</servlet-name>
+        <url-pattern>/PetController</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>RecordController</servlet-name>
+        <servlet-class>controller.RecordController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>RecordController</servlet-name>
+        <url-pattern>/RecordController</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>RegisterServlet</servlet-name>
+        <servlet-class>controller.RegisterServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>RegisterServlet</servlet-name>
+        <url-pattern>/RegisterServlet</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>ReportController</servlet-name>
+        <servlet-class>controller.ReportController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ReportController</servlet-name>
+        <url-pattern>/ReportController</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>StaffController</servlet-name>
+        <servlet-class>controller.StaffController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>StaffController</servlet-name>
+        <url-pattern>/StaffController</url-pattern>
+    </servlet-mapping>
+    
     <session-config>
         <session-timeout>30</session-timeout>
     </session-config>
